--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,12 @@ h1{
     font-size: 26px;
 }
 
-
-
-
+section{
+    /*outline: 1px solid purple;*/
+    height: 30%;
+    width: 50%;
+    margin-left: 20px;
+}
 
 span{
     /*outline: 1px solid orangered;*/
